--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "npx nodemon ./app.js"
+    "start" : "node server.js",
+    "start-dev": "npx nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
